--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -4,8 +4,12 @@ project(chip8)
 set(CMAKE_CXX>STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+include_directories(/opt/homebrew/opt/ncurses/include)
+link_directories(/opt/homebrew/opt/ncurses/lib)
+
 add_executable(chip8
     src/main.cpp
     src/chip8.cpp
     src/display.cpp
 )
+target_link_libraries(chip8 ncurses ncursesw)
