--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -11,5 +11,6 @@ add_executable(chip8
     src/main.cpp
     src/chip8.cpp
     src/display.cpp
+    src/utils.cpp
 )
 target_link_libraries(chip8 ncurses ncursesw)
