Add nix support

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
+# Build directories
 build/
-cmake-build-*/
+result
+result-*
+
+# Nix
+.direnv/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
